<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <Button
            android:id="@+id/start_intent_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_intent_service"
            tools:text="@string/start_intent_service"/>

    <Button
            android:id="@+id/start_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            tools:text="@string/start_service"/>

    <Button
            android:id="@+id/start_foreground_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_foreground_service"
            tools:text="@string/start_foreground_service"/>

    <View style="@style/DividerView"/>

    <Button
            android:id="@+id/bind_local_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_local_service"
            tools:text="@string/bind_local_service"/>

    <Button
            android:id="@+id/unbind_local_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unbind_local_service"
            tools:text="@string/unbind_local_service"/>

    <Button
            android:id="@+id/unbind_local_service_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bound_local_service_call"
            tools:text="@string/bound_local_service_call"/>

    <TextView
            android:id="@+id/unbind_local_service_call_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <View style="@style/DividerView"/>

    <Button
            android:id="@+id/bind_messenger_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_messenger_service"
            tools:text="@string/bind_messenger_service"/>

    <Button
            android:id="@+id/unbind_messenger_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unbind_messenger_service"
            tools:text="@string/unbind_messenger_service"/>

    <Button
            android:id="@+id/bound_messenger_service_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bound_messenger_service_call"
            tools:text="@string/bound_messenger_service_call"/>

</LinearLayout>
